# objectiveframe

./: .clang-format  .gitignore  404.html  AUTHORS  BUILD.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build-of.cmd  build-of.py  config_debug_build.cmd  config_release_build.cmd  eigen_implementation.md  index.html  objectiveframe_arch.pptx  ofbuild  ofbuild.cmd  sitemap.xml  vcpkg.json
about/: index.html
blog/: index.html
contact/: index.html
develop/: index.html
docs/: mkdocs.yml
docs/docs/: about.md  contact.md  develop.md  download.md  index.md  links.md  privacy.md  use.md  videos.md
download/: index.html
images/: Alignful.xpm  Alignlft.xpm  Bullet1.xpm  Clear.xpm  Datetime.xpm  Delete1.xpm  Delete2.xpm  Fontsize.xpm  Help1.xpm  Indentde.xpm  Indentin.xpm  Mail.xpm  Pagesetu.xpm  Printset.xpm  Saveall.xpm  Spellchk.xpm  Underlin.xpm  Winthorz.xpm  additional_close.xpm  bc.psp  bcx.xpm  bcxy.xpm  br001.xpm  calc_corba.xpm  elprop.psp  elprop.xpm  erase2.xpm  feedback.psp  feedback.xpm  force.xpm  i3dof.xpm  ibcNode.xpm  ibcX.xpm  ibcXY.xpm  icons2013.graffle  imgLdRot2.xpm  imgLdY2.xpm  imgguide.xpm  ldNode.xpm  ldX.xpm  (+99 more)
include/: ObjframeConfig.h  ObjframeConfig.h.in  json.hpp
install/: objectiveframe.iss  objectiveframe_v2.iss
links/: index.html
misc/: ofservice.srctrldb  ofservice.srctrlprj
privacy/: index.html
python/: beam_solver.py  blue_black.map  colormap.py  frame_four_loads.df3  frame_four_loads.py  frame_four_loads_solver.py  of_solver.py  red_black.map  test.py  test_solver.py
reference/: Doxyfile
search/: search_index.json
src/: CMakeLists.txt
src/civetweb/: CMakeLists.txt  CivetServer.cpp  civetweb.c
src/imguifd/: CMakeLists.txt  ImGuiFileDialog.cpp
src/objframe/: Area2D.cpp  Area2D.h  BeamPropDlg.cpp  BeamPropDlg.fl  BeamPropDlg.h  ButtonGroup.cpp  ButtonGroup.h  CMakeLists.txt  ElementLoadDlg.cpp  ElementLoadDlg.fl  ElementLoadDlg.h  ElementLoadsDlg.cpp  ElementLoadsDlg.fl  ElementLoadsDlg.h  FeedbackDlg.cpp  FeedbackDlg.fl  FeedbackDlg.h  FemDFEMCInterface.cpp  FemDFEMCInterface.h  FemInternalSolver.cpp  FemInternalSolver.h  FemWidget.cpp  FemWidget.h  Fl_ColorBox.h  Fl_HoverButton.cpp  Fl_HoverButton.h  FltkWidget.cpp  FltkWidget.h  IvfArea2D.cpp  IvfArea2D.h  IvfButtonGroup.cpp  IvfButtonGroup.h  IvfFemWidget.cpp  IvfFemWidget.h  IvfFltkWidget.cpp  IvfFltkWidget.h  IvfPlaneButton.cpp  IvfPlaneButton.h  LeapFinger.cpp  LeapFinger.h  (+52 more)
src/objframe/fltk/: BeamPropDlg.cpp  BeamPropDlg.h  ElementLoadDlg.cpp  ElementLoadDlg.h  ElementLoadsDlg.cpp  ElementLoadsDlg.h  FeedbackDlg.cpp  FeedbackDlg.fl  FeedbackDlg.h  Fl_ColorBox.cpp  Fl_ColorBox.h  Fl_HoverButton.cpp  Fl_HoverButton.h  MaterialDlg.cpp  MaterialDlg.h  MaterialsDlg.cpp  MaterialsDlg.h  NodeBCDlg.cpp  NodeBCDlg.fl  NodeBCsDlg.cpp  NodeBCsDlg.fl  NodeLoadDlg.cpp  NodeLoadDlg.fl  NodeLoadDlg.h  NodeLoadsDlg.cpp  NodeLoadsDlg.fl  NodeLoadsDlg.h  NodePropDlg.cpp  NodePropDlg.fl  NodePropDlg.h  ScalefactorDlg.cpp  ScalefactorDlg.fl  SplashFrame.cpp  SplashFrame.fl  StructureDlg.cpp  StructureDlg.fl  WorkspaceDlg.cpp  WorkspaceDlg.fl  WorkspaceDlg.h  fl_file_chooser_win.H  (+3 more)
src/objframe/images/: button.rgb  tlbc.rgb  tldload.rgb  tlfeedback.rgb  tlmaterials.rgb  tlnode.rgb  tlsolidline.rgb  tlviewreset.rgb  tlviewzoom.rgb
src/objframe_glfw/: Area2D.cpp  Area2D.h  ButtonGroup.cpp  ButtonGroup.h  CMakeLists.txt  FemInternalSolver.cpp  FemInternalSolver.h  FemView.cpp  FemView.h  GLFWApplication.cpp  GLFWApplication.h  GLFWWindow.cpp  GLFWWindow.h  IvfViewWindow.cpp  IvfViewWindow.h  LeapFinger.cpp  LeapFinger.h  LeapInteraction.cpp  LeapInteraction.h  PlaneButton.cpp  PlaneButton.h  StructureFactory.cpp  StructureFactory.h  main.cpp  resource.h  script_plugin.cpp  script_plugin.h
src/objframe_glfw/old/: FemDFEMCInterface.cpp  FemDFEMCInterface.h
src/ofai/: CMakeLists.txt  structure_generator.cpp
src/ofai_test/: CMakeLists.txt  main.cpp
src/ofservice/: CMakeLists.txt  ofservice.cpp
src/ofsolve/: CMakeLists.txt  beam_solver.cpp  calfem.cpp  frame_solver.cpp  solver_interface.cpp  tetgen_beam_mesher.cpp
src/ofui/: CMakeLists.txt  about_window.cpp  bc_prop_popup.cpp  console_window.cpp  coord_window.cpp  eigenmode_window.cpp  element_load_prop_popup.cpp  element_loads_window.cpp  element_prop_window.cpp  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl2.cpp  imgui_tables.cpp  imgui_widgets.cpp  load_mixer_window.cpp  log_window.cpp  main_toolbar.cpp  material_prop_popup.cpp  materials_window.cpp  message_popup.cpp  new_model_popup.cpp  node_bcs_window.cpp  node_load_prop_popup.cpp  node_loads_window.cpp  node_prop_window.cpp  plugin_prop_window.cpp  popup_window.cpp  prompt_window.cpp  prop_window.cpp  scale_window.cpp  script_window.cpp  settings_window.cpp  start_popup.cpp  texture.cpp  toolbar_window.cpp  ui_window.cpp  window_list.cpp
src/ofui/imgui/: imgui.cpp  imgui_demo.cpp
src/ofui_glfw/: CMakeLists.txt
src/solver/: BeamSolver.cpp  BeamSolver.h  CMakeLists.txt  calfem.cpp  main.cpp
src/util/: CMakeLists.txt  Color.cpp  Color.h  ColorMap.cpp  ColorMap.h  ProcessManager.cpp  ProcessManager.h  ResultInfo.cpp  ResultInfo.h  StatusOutput.cpp  StatusOutput.h  app_settings.cpp  logger.cpp  logger.h  util_functions.cpp
src/util/old/: ProcessManager.cpp  ProcessManager.h  StatusOutput.cpp  StatusOutput.h
src/visfem/: CMakeLists.txt  ColorTable.cpp  ColorTable.h  IvfBC.cpp  IvfBC.h  IvfBeamModel.cpp  IvfBeamModel.h  IvfColorTable.h  IvfFemBeam.cpp  IvfFemBeam.h  IvfFemBeamLoad.cpp  IvfFemNode.cpp  IvfFemNode.h  IvfFemNodeBC.cpp  IvfFemNodeBC.h  IvfFemNodeLoad.cpp  IvfFemNodeLoad.h  VisBC.cpp  VisBC.h  VisBeamModel.cpp  VisBeamModel.h  VisFemBeam.cpp  VisFemBeam.h  VisFemBeamLoad.cpp  VisFemBeamLoad.h  VisFemNode.cpp  VisFemNode.h  VisFemNodeBC.cpp  VisFemNodeBC.h  VisFemNodeLoad.cpp  VisFemNodeLoad.h  bc.cpp  beam.cpp  beam_load.cpp  beam_model.cpp  color_table.cpp  node.cpp  node_bc.cpp  node_load.cpp  preferences.cpp  (+1 more)
stylesheets/: extra.css
trunk/: CMakeLists.txt
use/: index.html
videos/: index.html
(+671 files in other folders)
