FILE(GLOB SOURCE_FILES *.cpp *.c *.h *.inl )

FILE(GLOB INCLUDE_FILES ${PROJECT_SOURCE_DIR}/include/civetweb/*.h ${PROJECT_SOURCE_DIR}/include/civetweb/*.inl ) 

IF(CMAKE_BUILD_TYPE STREQUAL Debug)
	ADD_LIBRARY(civetwebd ${INCLUDE_FILES} ${SOURCE_FILES})
ELSE(CMAKE_BUILD_TYPE STREQUAL Debug)
	ADD_LIBRARY(civetweb ${INCLUDE_FILES} ${SOURCE_FILES})
ENDIF(CMAKE_BUILD_TYPE STREQUAL Debug)
