FILE(GLOB SOURCE_FILES *.cpp)
FILE(GLOB INCLUDE_FILES ${PROJECT_SOURCE_DIR}/include/ofsolve/*.h) 

IF(CMAKE_BUILD_TYPE STREQUAL Debug)
	ADD_LIBRARY(ofsolved ${INCLUDE_FILES} ${SOURCE_FILES})
ELSE(CMAKE_BUILD_TYPE STREQUAL Debug)
	ADD_LIBRARY(ofsolve ${INCLUDE_FILES} ${SOURCE_FILES})
ENDIF(CMAKE_BUILD_TYPE STREQUAL Debug)
