file(GLOB SOURCE_FILES ../ofui/*.cpp) 
file(GLOB INCLUDE_FILES ${PROJECT_SOURCE_DIR}/include/ofui/*.h ) 

if(CMAKE_BUILD_TYPE STREQUAL Debug)
	include_directories(BEFORE ${PROJECT_SOURCE_DIR}/src/objframe_glfw ${PROJECT_SOURCE_DIR}/include)
	add_definitions(-DUSE_FEMVIEW)
	add_library(ofui_glfwd ${INCLUDE_FILES} ${SOURCE_FILES})
	target_include_directories(ofui_glfwd PRIVATE ${CHAISCRIPT_INCLUDE_DIRS})
else(CMAKE_BUILD_TYPE STREQUAL Debug)
	include_directories(BEFORE ${PROJECT_SOURCE_DIR}/src/objframe_glfw ${PROJECT_SOURCE_DIR}/include)
	add_definitions(-DUSE_FEMVIEW)
	add_library(ofui_glfw ${INCLUDE_FILES} ${SOURCE_FILES})
	target_include_directories(ofui_glfw PRIVATE ${CHAISCRIPT_INCLUDE_DIRS})
endif(CMAKE_BUILD_TYPE STREQUAL Debug)
