FILE(GLOB SOURCE_FILES *.cpp)
FILE(GLOB INCLUDE_FILES *.h ${PROJECT_SOURCE_DIR}/include/ofutil/*.h)

IF(CMAKE_BUILD_TYPE STREQUAL Debug)
	ADD_LIBRARY(utild ${INCLUDE_FILES} ${SOURCE_FILES})
ELSE(CMAKE_BUILD_TYPE STREQUAL Debug)
	ADD_LIBRARY(util ${INCLUDE_FILES} ${SOURCE_FILES})
ENDIF(CMAKE_BUILD_TYPE STREQUAL Debug)
