FILE(GLOB SOURCE_FILES *.cpp) 
FILE(GLOB INCLUDE_FILES ${PROJECT_SOURCE_DIR}/include/vfem/*.h) 

IF(CMAKE_BUILD_TYPE STREQUAL Debug) 
	ADD_LIBRARY(visfemd ${INCLUDE_FILES} ${SOURCE_FILES})
	target_include_directories(visfemd PUBLIC ${PROJECT_SOURCE_DIR}/include/vfem)
ELSE(CMAKE_BUILD_TYPE STREQUAL Debug)
	ADD_LIBRARY(visfem ${INCLUDE_FILES} ${SOURCE_FILES})
	target_include_directories(visfem PUBLIC ${PROJECT_SOURCE_DIR}/include/vfem)
ENDIF(CMAKE_BUILD_TYPE STREQUAL Debug)
